--- a/Cookies/new_website/{{cookiecutter.website_name}}/bower.json
+++ b/Cookies/new_website/{{cookiecutter.website_name}}/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{cookiecutter.app_name}}",
+  "name": "{{cookiecutter.website_name}}",
   "dependencies": {
     "bootstrap": "~3.2.0",
     "jQuery": "~2.1.3"
