--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-# script: tester.py
-# Command to run tests needs editing
+script: pytest
