--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 ete3==3.0.0b35
 pandas==0.19.2
+openpyxl==2.4.7
 pexpect==4.2.1
 slacker==0.9.42
 biopython==1.68
+numpy==1.12.0
 tablib==0.11.4
 mygene==3.0.0
 cookiecutter==1.5.1
-flask==0.12
+Flask==0.12.1
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.2
+Flask-User==0.6.11
+Flask-WTF==0.14.2
+treelib==1.3.5
