--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
-# Include the license file
+# Include the README file
 include README.rst
+
+# Include the requirements file
+include requirements.txt
+
+# Include the setup file
+include setup.py
