--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run nosetests
-script: nosetests Tests/test_orthologs.py
+script: nosetests Tests/test_orthologs.py --verbosity=3
