--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ shiny_dir_mana.txt
 /.idea
 /.idea/**
 .spyproject/*
-TODO.py
+datasnakes/Manager/TODO.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
