Update version to 0.1.0a1 (alpha).

--- a/datasnakes/.gitignore
+++ b/datasnakes/.gitignore
@@ -9,7 +9,7 @@ shiny_dir_mana.txt
 /.idea
 /.idea/**
 .spyproject/*
-datasnakes/Manager/TODO.py
+TODO.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
