--- a/datasnakes/Cookies/new_repository/{{ cookiecutter.repository_name }}/.gitignore
+++ b/datasnakes/Cookies/new_repository/{{ cookiecutter.repository_name }}/.gitignore
@@ -9,3 +9,40 @@ shiny_dir_mana.txt
 /.idea
 /.idea/**
 .spyproject/*
+datasnakes/Manager/TODO.py
+TODO.py
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# C extensions
+*.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
