--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.5"
   - "3.6"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - "pip install --only-binary=numpy,scipy numpy==1.12.0 scipy==0.18.1"
+  - "pip install -r requirements.txt"
 # command to run nosetests
 script: nosetests datasnakes/Tests/test_orthologs.py --verbosity=3
