--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
+  - "pip install --upgrade pip setuptools wheel"
   - "pip install --only-binary=numpy,scipy numpy==1.12.0 scipy==0.18.1"
   - "pip install -r requirements.txt"
 # command to run nosetests
