--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+notifications:
+  email: false
 # command to install dependencies
 install:
   - "pip install --upgrade pip setuptools wheel"
