--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
   email: false
 # command to install dependencies
 install:
-  - "pip install --upgrade pip setuptools wheel"
+  - "pip install --upgrade pip setuptools"
   - "pip install --only-binary=numpy,scipy numpy==1.12.0 scipy==0.18.1"
   - "pip install -r requirements.txt"
 # command to run nosetests
