--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ notifications:
   email: false
 # command to install dependencies
 install:
-  - "pip install --upgrade pip"
-  - "pip install --only-binary=numpy,scipy numpy==1.12.0 scipy==0.18.1"
-  - "pip install -r requirements.txt"
+  - "pip install --upgrade pip setuptools wheel"
+  - "pip install --user --only-binary=numpy,scipy numpy scipy"
+  - "pip install --user matplotlib ipython jupyter sympy nose"
+  - "pip install --user -r requirements.txt"
 # command to run nosetests
 script: nosetests Datasnakes/Tests/test_orthologs.py --verbosity=3
