--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ notifications:
 # command to install dependencies
 install:
   - "pip install --upgrade pip setuptools wheel"
-  - "pip install --user --only-binary=numpy,scipy numpy scipy"
-  - "pip install --user matplotlib ipython jupyter sympy nose"
-  - "pip install --user -r requirements.txt"
+  - "pip install --only-binary=numpy,scipy numpy scipy"
+  - "pip install matplotlib ipython jupyter sympy nose"
+  - "pip install -r requirements.txt"
 # command to run nosetests
 script: nosetests Datasnakes/Tests/test_orthologs.py --verbosity=3
