Added a section for including codeml control files in the setup.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -27,3 +27,6 @@ include Docs/README.md
 
 # Include tests
 include Tests/*
+
+# Include Codeml Control Files
+include Datasnakes/Orthologs/Phylogenetics/PAML/ctlfiles/*
