--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ Flask==0.12.1
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.2
-Flask-User==0.6.11
-Flask-WTF==0.14.2
+Flask-User>=0.6.11
+Flask-WTF>=0.14.2
 treelib==1.3.5
 psutil==5.1.3
 luigi==2.3.0
