--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,18 +15,15 @@ include LICENSE
 
 # Include Modules
 recursive-include Datasnakes/Cookies *
-recursive-include Datasnakes/Manager/index *
+recursive-include Datasnakes/Manager/config *
 
 # Include docs
 include Docs/docs/source/*.rst
 include Docs/docs/source/Makefile
 include Docs/docs/source/conf.py
-include Docs/docs/source/convertdocs.py
+include Docs/docs/convertdocs.py
 include Docs/archive/*
 include Docs/README.md
 
 # Include tests
 include Tests/*
-
-# Include Codeml Control Files
-include Datasnakes/Orthologs/Phylogenetics/PAML/ctlfiles/*
