Added project path and yaml for specific alignment algorithms.

--- a/Datasnakes/Manager/config/config_template_new.yml
+++ b/Datasnakes/Manager/config/config_template_new.yml
@@ -33,4 +33,7 @@ GenBank_config:
 
 Alignment_config:
   aln_program: 'GUIDANCE2'
-  project_path: null
+  Guidance_config:
+    seqFile: null
+    msaProgram: null
+    seqType: null
