--- a/Datasnakes/Manager/config/config_template_existing.yml
+++ b/Datasnakes/Manager/config/config_template_existing.yml
@@ -3,6 +3,7 @@ Management_config:
   repo: 'Test-Repository'
   user: 'Test-User'
   project: 'Test-Project'
+  project_path: null
   research: 'Test-Research'
   research_type: 'Test-Research-Type'
   app: 'Test-App'
@@ -26,4 +27,7 @@ GenBank_config:
 
 Alignment_config:
   aln_program: 'GUIDANCE2'
-  project_path: null
+  Guidance_config:
+    seqFile: null
+    msaProgram: null
+    seqType: null
