Updated the MANEFEST.in to include the BioSQL scripts.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -27,3 +27,7 @@ include Docs/README.md
 
 # Include tests
 include Tests/*
+
+# Include BioSQL files
+
+recursive-include Datasnakes/Manager/BioSQL/biosql_repo/scripts *
