--- a/Docs/docs/source/Makefile
+++ b/Docs/docs/source/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = Datasnakes-Scripts
+SPHINXPROJ    = OrthoEvolution
 SOURCEDIR     = .
 BUILDDIR      = _build
 
