Updated Datasnakes-Scripts strings to OrthoEvolution.

--- a/OrthoEvol/Manager/config/yml/config_template_new.yml
+++ b/OrthoEvol/Manager/config/yml/config_template_new.yml
@@ -52,6 +52,6 @@ GenBank_config:
 Alignment_config:
   aln_program: 'GUIDANCE2'
   Guidance_config:
-    seqFile: "C:\\Users\\rgilmore\\PycharmProjects\\Datasnakes-Scripts\\OrthoEvol\\Manager\\config\\test.faa"
+    seqFile: "C:\\Users\\rgilmore\\PycharmProjects\\OrthoEvolution\\OrthoEvol\\Manager\\config\\test.faa"
     msaProgram: "CLUSTALW"
     seqType: "nuc"
