Updated documentation and docs.cfg

--- a/Docs/docs.cfg
+++ b/Docs/docs.cfg
@@ -14,6 +14,7 @@ phylo = phylogeneticsreadme.rst
 iqtree = iqtreereadme.rst
 paml = pamlreadme.rst
 phyml = phymlreadme.rst
+phylotree = phylotreereadme.rst
 
 [pipeline]
 main = pipelinereadme.rst
