Update some values changed during testing.

--- a/OrthoEvol/Manager/config/yml/database_config.yml
+++ b/OrthoEvol/Manager/config/yml/database_config.yml
@@ -2,70 +2,70 @@ Database_config:
   email:  "rgilmore@umc.edu"
   driver: "sqlite3"
   Full:
-    configure_flag: True
-    archive_flag: True
+    configure_flag: False
+    archive_flag: False
     delete_flag: False
     project_flag: False
     _path: "!!python/object/apply:pathlib.Path ['']"
     Projects:
       Project_Name_1:
         configure_flag: True
-        archive_flag: True
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['Project_Name_1']"
       Project_Name_2:
         configure_flag: True
-        archive_flag: True
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['Project_Name_2']"
       Project_Name_3:
         configure_flag: True
-        archive_flag: True
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['Project_Name_3']"
     NCBI:
-      configure_flag: True
-      archive_flag: True
+      configure_flag: False
+      archive_flag: False
       delete_flag: False
       _path: "!!python/object/apply:pathlib.Path ['NCBI']"
       NCBI_blast:
-        configure_flag: True
-        archive_flag: True
+        configure_flag: False
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['NCBI', 'blast']"
         NCBI_blast_db:
-          configure_flag: True
-          archive_flag:  True
+          configure_flag: False
+          archive_flag:  False
           delete_flag: False
           _path: "!!python/object/apply:pathlib.Path ['NCBI', 'blast', 'db']"
         NCBI_blast_windowmasker_files:
-          configure_flag: True
-          archive_flag: True
+          configure_flag: False
+          archive_flag: False
           delete_flag: False
           _path: "!!python/object/apply:pathlib.Path ['NCBI', 'blast', 'windowmasker_files']"
           taxonomy_ids: ""
       NCBI_pub_taxonomy:
         configure_flag: True
-        archive_flag: True
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['NCBI', 'pub', taxonomy']"
       NCBI_refseq_release:
         seqtype: "rna" # Other seqtypes are protein and genomic
         seqformat: "gbff"
         collection_subset: "vertebrate_mammalian"
-        configure_flag: True
-        archive_flag: True
+        configure_flag: False
+        archive_flag: False
         delete_flag: False
-        upload_flag: True
+        upload_flag: False
         _path: "!!python/object/apply:pathlib.Path ['NCBI', 'refseq', 'release']"
         upload_list: [1,2,3,4,5,6,7,8,9,10]
     ITIS:
       configure_flag: True
-      archive_flag: True
+      archive_flag: False
       delete_flag: False
       _path: "!!python/object/apply:pathlib.Path ['ITIS']"
       ITIS_taxonomy:
         configure_flag: True
-        archive_flag: True
+        archive_flag: False
         delete_flag: False
         _path: "!!python/object/apply:pathlib.Path ['ITIS', 'taxonomy']"
