--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Flask-User==0.6.13
 Flask-WTF>=0.14.2
 treelib==1.3.5
 psutil==5.2.2
-luigi==2.3.0
+luigi>=2.8.0
 sciluigi==0.9.5b6
 logzero>=1.3.1
 xmltodict>=0.11.0
