--- a/OrthoEvol/Manager/config/yml/database_config.yml
+++ b/OrthoEvol/Manager/config/yml/database_config.yml
@@ -1,7 +1,7 @@
 Database_config:
   email:  "rgilmore@umc.edu"
   driver: "sqlite3"
-  ftp_flag: False
+  ftp_flag: True
   Full:
     configure_flag: False
     archive_flag: False
@@ -54,7 +54,8 @@ Database_config:
         seqtype: "rna" # Other seqtypes are protein and genomic
         seqformat: "gbff"
         collection_subset: "vertebrate_mammalian"
-        configure_flag: False
+        activate: "!!python/object/apply:pathlib.Path ['~', '.venv', 'OrthoEvol', 'bin', 'activate']"
+        configure_flag: True
         archive_flag: False
         delete_flag: False
         upload_flag: True
