Add environment paths to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ shiny_dir_mana.txt
 /.Rproj*
 /.idea
 /.idea/**
-.spyproject/*
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
 Datasnakes/Manager/TODO.py
 TODO.py
 # Byte-compiled / optimized / DLL files
@@ -46,6 +50,15 @@ coverage.xml
 
 # Translations
 *.mo
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 err.txt
 .pypiprc
