--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ cache: pip
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
 notifications:
-  email: l0p2k8x1d2n0s8t0@vallendergenetics.slack.com
+  email: datasnakes@gmail.com
 # command to install dependencies
 install:
   - "pip install --upgrade pip setuptools wheel"
