--- a/OrthoEvol/Manager/config/yml/databases.yml
+++ b/OrthoEvol/Manager/config/yml/databases.yml
@@ -27,7 +27,7 @@ Database_config:
         seqformat: "gbff"
         collection_subset: "vertebrate_mammalian"
         activate: !!python/object/apply:pathlib.Path ['~', '.venv', 'OrthoEvol', 'bin', 'activate']
-        configure_flag: False
+        configure_flag: True
         configure_template: True
         archive_flag: False
         delete_flag: False
