--- a/OrthoEvol/Manager/config/yml/databases.yml
+++ b/OrthoEvol/Manager/config/yml/databases.yml
@@ -27,8 +27,8 @@ Database_config:
         collection_subset: "vertebrate_mammalian"
         activate: !!python/object/apply:pathlib.Path ['~', '.venv', 'OrthoEvol', 'bin', 'activate']
         configure_flag: True
-          configure_template: True
-          download_flag: True
+        download_flag: True
+        template_flag: True
         archive_flag: False
         delete_flag: False
         upload_flag: True
