Updated keywords in databases.yml config file.

--- a/OrthoEvol/Manager/config/yml/databases.yml
+++ b/OrthoEvol/Manager/config/yml/databases.yml
@@ -22,17 +22,16 @@ Database_config:
       NCBI_pub_taxonomy:
         _path: !!python/object/apply:pathlib.Path ['NCBI', 'pub', taxonomy']
       NCBI_refseq_release:
-        seqtype: "rna"
-        seqformat: "gbff"
-        collection_subset: "vertebrate_mammalian"
-        activate: !!python/object/apply:pathlib.Path ['~', '.venv', 'OrthoEvol', 'bin', 'activate']
         configure_flag: True
-        download_flag: True
-        template_flag: True
         archive_flag: False
         delete_flag: False
         upload_flag: True
-        _path: !!python/object/apply:pathlib.Path ['NCBI', 'refseq', 'release']
+        collection_subset: "vertebrate_mammalian"
+        seqtype: "rna"
+        seqformat: "gbff"
+        template_flag: True
+        download_flag: True
+        upload_job_name: "upload_refseq_release"
     ITIS:
       _path: !!python/object/apply:pathlib.Path ['ITIS']
       ITIS_taxonomy:
