--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+matplotlib>=3.1.1
 tqdm==4.25.0
 ete3>=3.0.0b35
 pandas>=0.19.2
@@ -17,7 +18,6 @@ Flask-WTF>=0.14.2
 treelib==1.3.5
 psutil==5.4.3
 luigi>=2.8.0
-sciluigi==0.9.5b6
 logzero>=1.5.0
 xmltodict>=0.11.0
 pyyaml>=3.12
