Removed matplotlib from travis CI pip install line

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ notifications:
   email: datasnakes@gmail.com
 # command to install dependencies
 before_install:
- - sudo apt-get install -qq phyml
+  - sudo apt-get install -qq phyml
 install:
   - "pip install --upgrade pip setuptools wheel"
   - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install matplotlib ipython jupyter sympy nose"
+  - "pip install ipython jupyter sympy nose"
   - "pip install -r requirements.txt"
 # command to run nosetests
 script:
- - nosetests tests/ --verbosity=3
+  - nosetests tests/ --verbosity=3
