--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,7 @@ biopython==1.70
 tablib>=0.11.5
 mygene==3.0.0
 cookiecutter>=1.5.1
-Flask==0.12.1
-Flask-Login==0.4.0
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.2
-Flask-User==0.6.13
-Flask-WTF>=0.14.2
+Flask>=1.0.0
 treelib==1.3.5
 psutil==5.4.3
 luigi>=2.8.0
