--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
   - "pip install matplotlib ipython jupyter sympy nose"
   - "pip install -r requirements.txt"
 # command to run nosetests
-script: nosetests tests/ --verbosity=3
+script: pytest tests
