--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ install:
   - "pip install --only-binary=numpy,scipy numpy scipy"
   - "pip install matplotlib ipython jupyter sympy pytest"
   - "pip install -r requirements.txt"
+  - "pip install ."
 # command to run unittests
 script: pytest tests
