Update version of pytest.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
 install:
   - "pip install --upgrade pip setuptools wheel"
   - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov"
+  - "pip install matplotlib ipython jupyter sympy pytest>=4.6 codecov pytest-cov"
   - "pip install -r requirements.txt"
   - "pip install ."
 # command to run unittests
