--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ install:
   - "pip install ."
 # command to run unittests
 script:
-  - pytest --cov=./
+  - pytest --cov-report=xml --cov=OrthoEvol tests/
 after_success:
   - codecov
