--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ notifications:
 install:
   - "pip install --upgrade pip setuptools wheel"
   - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install matplotlib ipython jupyter sympy nose"
+  - "pip install matplotlib ipython jupyter sympy pytest"
   - "pip install -r requirements.txt"
-# command to run nosetests
-script: nosetests tests/ --verbosity=3
+  - "pip install ."
+# command to run unittests via pytest
+script:
+  - pytest tests/
