--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
 install:
   - "pip install --upgrade pip setuptools wheel"
   - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov"
+  - "pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov<=2.6.0"
   - "pip install -r requirements.txt"
   - "pip install ."
 jobs:
