--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ notifications:
   email: datasnakes@gmail.com
 # command to install dependencies
 install:
-  - "pip install --upgrade pip setuptools wheel"
-  - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov<=2.6.0"
-  - "pip install -r requirements.txt"
-  - "pip install ."
+  - pip install --upgrade pip setuptools wheel
+  - pip install --only-binary=numpy,scipy numpy scipy
+  - pip install matplotlib ipython jupyter sympy pytest codecov "pytest-cov<=2.6.0"
+  - pip install -r requirements.txt
+  - pip install .
 jobs:
   include:
     - python: 3.5
