--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,40 @@ os: linux
 cache: pip
 notifications:
   email: datasnakes@gmail.com
-# command to install dependencies
-install:
-  - pip install --upgrade pip setuptools wheel
-  - pip install --only-binary=numpy,scipy numpy scipy
-  - pip install matplotlib ipython jupyter sympy pytest codecov
-  - pip install -r requirements.txt
-  - pip install .
 jobs:
   include:
     - python: 3.5
       dist: trusty
       install:
-      - pip install "pytest-cov<=2.6.0"
+        - pip install --upgrade pip setuptools wheel
+        - pip install --only-binary=numpy,scipy numpy scipy
+        - pip install matplotlib ipython jupyter sympy pytest codecov "pytest-cov<=2.6.0"
+        - pip install -r requirements.txt
+        - pip install .
     - python: 3.6
       dist: xenial
       install:
-      - pip install pytest-cov
+        - pip install --upgrade pip setuptools wheel
+        - pip install --only-binary=numpy,scipy numpy scipy
+        - pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov
+        - pip install -r requirements.txt
+        - pip install .
     - python: 3.7
       dist: xenial
       install:
-      - pip install pytest-cov
+        - pip install --upgrade pip setuptools wheel
+        - pip install --only-binary=numpy,scipy numpy scipy
+        - pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov
+        - pip install -r requirements.txt
+        - pip install .
     - python: 3.8
       dist: xenial
       install:
-      - pip install pytest-cov
+        - pip install --upgrade pip setuptools wheel
+        - pip install --only-binary=numpy,scipy numpy scipy
+        - pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov
+        - pip install -r requirements.txt
+        - pip install .
 # command to run unittests
 script:
   - pytest --cov-report=xml --cov=OrthoEvol tests/
