--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Flask-SQLAlchemy>=2.2
 Flask-User>=0.6.13
 Flask-WTF>=0.14.2
 treelib==1.3.5
-psutil==5.6.7
+psutil>=5.6.7
 luigi>=2.8.0
 logzero>=1.5.0
 xmltodict>=0.11.0
