--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,7 @@ cache: pip
 notifications:
   email: datasnakes@gmail.com
 jobs:
-  include:
-    - python: 3.5
-      dist: trusty
-      before_install:
-        - sudo apt-get install -qq phyml
-      install:
-        - pip install --upgrade pip setuptools wheel
-        - pip install --only-binary=numpy,scipy numpy scipy
-        - pip install matplotlib ipython jupyter sympy pytest codecov "pytest-cov<=2.6.0"
-        - pip install -r requirements.txt
-        - pip install .
-    - python: 3.6
-      dist: xenial
-      before_install:
-        - sudo apt-get install -qq phyml
-      install:
-        - pip install --upgrade pip setuptools wheel
-        - pip install --only-binary=numpy,scipy numpy scipy
-        - pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov
-        - pip install -r requirements.txt
-        - pip install .
+  include:W
     - python: 3.7
       dist: xenial
       before_install:
@@ -36,6 +16,16 @@ jobs:
         - pip install -r requirements.txt
         - pip install .
     - python: 3.8
+      dist: xenial
+      before_install:
+        - sudo apt-get install -qq phyml
+      install:
+        - pip install --upgrade pip setuptools wheel
+        - pip install --only-binary=numpy,scipy numpy scipy
+        - pip install matplotlib ipython jupyter sympy pytest codecov pytest-cov
+        - pip install -r requirements.txt
+        - pip install .
+    - python: 3.9
       dist: xenial
       before_install:
         - sudo apt-get install -qq phyml
