--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Flask-SQLAlchemy
 Flask-WTF
 treelib==1.3.5
 psutil>=5.6.7
-luigi>=2.8.0
+luigi>3.1.1
 logzero>=1.5.0
 xmltodict>=0.11.0
 plotly>=3.10.0
