--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,18 +4,22 @@
 version: 2
 
 build:
-  image: latest
-  os: ubuntu-22.04
-  # Pre-build job: Run update_docs.py to regenerate API docs and convert READMEs
-  # This runs before Sphinx builds the documentation
-  commands:
-    - python docs/update_docs.py --skip-build
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.9"
+  jobs:
+    pre_build:
+      # Pre-build job: Run update_docs.py to regenerate API docs and convert READMEs
+      # This runs before Sphinx builds the documentation
+      - python docs/update_docs.py --skip-build
 
 python:
-  version: 3.9
   install:
-    - path: .
     - requirements: requirements.txt
     - requirements: docs/requirements-docs.txt
+    # Install our python package before building the docs
+    - method: pip
+      path: .
 
-# Sphinx will be auto-detected from docs/docs/source/conf.py
+sphinx:
+  configuration: docs/docs/source/conf.py
