--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Framework :: Flask",
-    "Framework :: Cookiecutter"
+    "Framework :: Flask"
 ]
 
 dependencies = [
